# MessageBookCli

./: .gitignore  CMakeLists.txt  README.md
docs/: make_info.py
docs/inside/: HELP.md
include/cmdline/: cmdline.h
include/md5/: README.md  md5.cpp  md5.h
include/md5/test/: test.cpp
src/: classes.cpp  classes.h  info.cpp  info.h  main.cpp  message.cpp  messagebook.cpp  messagebook.h  person.cpp  person.h  person_ptr.cpp  person_ptr.h  units.cpp  units.h  val.cpp  val.h  val_Atom.cpp  val_Base.cpp  val_MessageBook.cpp  val_Person.cpp  val_PersonHandle.cpp  val_Str.cpp  val_VecStr.cpp  value.cpp  value.h
src/help/: HELP.cpp  help.h
src/parser/: idmap.cpp  idmap.cpp.rabbit  idmap.h  interface.cpp  interface.h  lex.yy.c  lexer.cpp  lineno.cpp  lineno.h  parser.cpp  parser.h  parser.l  parser.y
src/temp/: val.cpp  val.h
src/val/: val.h  val_Atom.cpp  val_Base.cpp  val_MessageBook.cpp  val_Person.cpp  val_PersonHandle.cpp  val_Str.cpp  val_VecStr.cpp
test/: test.cpp
